# desafio-c2s

./: .gitignore  README.md  client.py  initial_data.py  models.py  parser.py  pyproject.toml  server.py
app/: models.py  parser.py  services.py
tests/: test_models.py  test_parser.py  test_services.py
