[project]
name = "desafio-c2s"
version = "0.1.0"
description = "Desafio Técnico C2S - Vaga de Desenvolvedor Python"
authors = [
    { name = "Paulo R. Pereira Jr.", url = "https://github.com/paulorobertouri" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.3.0",
    "mcp[cli]>=1.9.1",
    "openai>=1.82.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
